Se agrega funcionalidades y testing para estas, se modifica Jenkinsfile y sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 
 # Información del proyecto
 sonar.projectKey=co.com.ceiba.adn:Reservas-victor.estrada
-sonar.projectName=CeibaADN-Reservas(camilo.sanchez)
+sonar.projectName=CeibaADN-Reservas(victor.estrada)
 
 # Configuracion del sonar para proyecto typescript
 sonar.projectVersion=1.0
