--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,6 +17,9 @@
       "@producto/*": [
         "src/app/feature/producto/*"
       ],
+      "@reserva/*": [
+        "src/app/feature/reserva/*"
+      ],
       "@shared/*": [
         "src/app/shared/*"
       ]
