--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json -o",
     "build": "ng build --prod",
-    "test": "ng test --code-coverage",
+    "test": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "bootstrap": "^5.1.3",
+    "moment": "^2.29.1",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.7",
+    "sweetalert2": "^11.4.4",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
