se modifica sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,4 +12,4 @@ sonar.test.inclusions=**/*.spec.ts
 sonar.sourceEncoding=UTF-8
 
 sonar.javascript.lcov.reportPaths=reports/coverage/app-base/lcov.info
-sonar.testExecutionReportPaths=reports/unit/test-sonar.xml
+# sonar.testExecutionReportPaths=reports/unit/test-sonar.xml
