cambio de projectKey y projectName

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 
 # Información del proyecto
-sonar.projectKey=co.com.ceiba.adn:Reservas-victor.estrada
-sonar.projectName=CeibaADN-Reservas(victor.estrada)
+sonar.projectKey=co.com.ceiba.adn:ReservasFront-victor.estrada
+sonar.projectName=CeibaADN-ReservasFront(victor.estrada)
 
 # Configuracion del sonar para proyecto typescript
 sonar.projectVersion=1.0
